fixed body min-height overflow

--- a/src/components/Site/Body/Body.scss
+++ b/src/components/Site/Body/Body.scss
@@ -1,5 +1,23 @@
 .body {
   background-color:#f0f0f0;
-  height: 100%;
   flex:1;
+}
+
+.tilerow {
+    flex:1;
+  display: flex;
+  flex-direction: row;
+}
+
+.tilecolumn {
+  flex:1;
+  display: flex;
+  flex-direction: column;
+}
+
+.tileextended {
+   flex:1;
+   .tile {
+     height:500px;
+   }
 }
