--- a/src/components/Site/Home/Home.scss
+++ b/src/components/Site/Home/Home.scss
@@ -3,19 +3,22 @@
   display:flex;
   flex-direction: column;
   box-sizing: border-box;
-  height: 100%;
+  flex:1;
+height: 100%;
 }
 
 
 html {
-
   height: 100%;
 }
 
 body {
   margin:0;
-  height: 100%;
+  min-height: 100%;
   padding:0;
+    display:flex;
+  flex-direction: row;
+  
 }
 
 .content {
